--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
         
         <div class="row">
             <div class="col-sm-7 col-md-7">
-                <img id="stream" src="http://192.168.1.15:8080/?action=stream" width="100%" height="458">
+                <img id="stream" src="http://ARDUINO:IP:8080/?action=stream" width="100%" height="458">
             </div>
             <div class="col-sm-5 col-md-5">
                 <div class="row">
